Fix jisho search alignment if line wrapped

--- a/main.css
+++ b/main.css
@@ -355,6 +355,7 @@ input {
 
 #jisho-search {
     align-items: center;
+    text-align: center;
 }
 
 #header-search-flexbox {
